--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Don't put the keys in quotes, please
-GEMINI_API_KEY=
-STABILITY_API_KEY=
+GEMINI_API_KEY=<Your_Google_API_Key>
+STABILITY_API_KEY=<Your_Stability_API_Key>
 
